2003-02-15  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc,objs/objs.cc,objs/chunks.cc:  A removed object now has
	its chunk coords set to (255, 255).

	* objs/chunks.cc (Chunk_cache): Rewrote 'blocking' code.  Now a
	0-3 element count is maintained.

	* usecode/intrinsics.cc: Mark object as deleted before putting it
	back in the world.

2003-02-12  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/iregobjs.cc,gamemap.cc: Use 'invisible' flag from quality
	byte.  Fixes 'caltrops not invisible' bug.
	* gamerend.cc (using): Render all flat tiles before rendering the
	RLE flats.  Fixes 'chopped-off' rocks in desert.

2003-02-11  Jeff Freedman  <jeff@amy.nerble.net>

	* monsters.cc: Cyclops cause quakes when they walk.

2003-02-05 Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* README.Qtopia: few changes to match the current compile method
	* configure.in: reverted the zaurus/embeddix $host_vendor variable
	
2003-01-27  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: When resurrecting, set schedule to something reasonable.

2002-12-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* keyactions.cc: fixed crash in alternate SI intro
	* sigame.cc: fixed wrong char* initializer (Philipp Thomas <pthomas@suse.de>)

2002-12-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Spellbook_gump.cc (public): Bookmark always shows, and
	clicking on it gets you back to its page.

2002-11-26  Jeff Freedman  <jeff@amy.nerble.net>

	* CombatOptions_gump.cc:  Added "Combat" menu.

2002-11-23  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: When combat is paused, you can direct a party member
	by right-clicking, then clicking on a target to attack.

	* combat.cc,keys.cc,etc.:  Suspend/resume combat (space key).
	* combat.h (public): Combat class with options.
	* actors.cc:  Optionally show hits on screen.

2002-11-22  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc (Game_window): Don't show new screen res. if in gump mode.