@@ -1,3 +1,7 @@
+2003-02-16  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* drag.cc (Dragging_info): Don't drop above where we can see.
+
 2003-02-15  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* drag.cc,objs/objs.cc,objs/chunks.cc:  A removed object now has
